--- a/demo/package.json
+++ b/demo/package.json
@@ -5,11 +5,11 @@
       "version": "1.5.0"
     },
     "tns-android": {
-      "version": "1.5.0"
+      "version": "1.5.1"
     }
   },
   "dependencies": {
-    "nativescript-google-maps-sdk": "^1.1.0",
+    "nativescript-google-maps-sdk": "*",
     "tns-core-modules": "1.5.0"
   }
 }
