implement cameraChanged and markerSelect map events

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,15 +1,15 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-ios": {
-      "version": "1.5.0"
-    },
-    "tns-android": {
-      "version": "1.5.1"
-    }
-  },
-  "dependencies": {
-    "nativescript-google-maps-sdk": "*",
-    "tns-core-modules": "1.5.0"
-  }
+	"nativescript": {
+		"id": "org.nativescript.demo",
+		"tns-ios": {
+			"version": "1.5.1"
+		},
+		"tns-android": {
+			"version": "1.5.1"
+		}
+	},
+	"dependencies": {
+		"nativescript-google-maps-sdk": "file:../",
+		"tns-core-modules": "1.5.1"
+	}
 }
