--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
   "dependencies": {},
   "devDependencies": {
-    "tns-core-modules": "^1.5.1"
+    "tns-core-modules": "^1.5.1",
+    "typescript": "^1.7.5"
   }
 }
