--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "ios": "1.5.1"
     }
   },
+  "dependencies": {
+    "nativescript-plugin-google-play-services": "26.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,7 +32,6 @@
     "url": "https://github.com/dapriett/nativescript-google-maps-sdk/issues"
   },
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
-  "dependencies": {},
   "devDependencies": {
     "tns-core-modules": "^1.5.1",
     "typescript": "^1.7.5"
