--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "noEmitHelpers": true,
     },
     
     "filesGlob": [
