Removed noEmitOnError true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "noEmitHelpers": true,
-        "noEmitOnError": true
+        "noEmitHelpers": true
     },
     
     "filesGlob": [
