--- a/platforms/android/include.gradle
+++ b/platforms/android/include.gradle
@@ -7,5 +7,6 @@ android {
 }
 
 dependencies {
-	compile 'com.google.android.gms:play-services-maps:+'
+	def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : '+'
+	compile "com.google.android.gms:play-services-maps:$googlePlayServicesVersion"
 }
