Add typings entry to package.json.
Fix Typescript erros in definition file.
Allows module to work in Typescript with:
`import {MapView, Marker, Polyline, Position} from 'nativescript-google-maps-sdk';`

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.13",
   "description": "Google Maps SDK plugin for Nativescript",
   "main": "map-view.js",
+  "typings": "map-view.d.ts",
   "nativescript": {
     "platforms": {
       "android": "1.5.1",
