--- a/demo/package.json
+++ b/demo/package.json
@@ -2,10 +2,10 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "2.3.0"
+      "version": "2.5.0-2016-11-3-2"
     },
     "tns-android": {
-      "version": "2.3.0"
+      "version": "2.5.0-next-2016-11-17-1406"
     }
   },
   "dependencies": {
