--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nativescript-google-maps-sdk",
   "version": "1.4.1",
   "description": "Google Maps SDK plugin for Nativescript",
-  "main": "map-view.js",
+  "main": "map-view",
   "typings": "map-view.d.ts",
   "nativescript": {
     "platforms": {
