--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nativescript-google-maps-sdk",
-  "version": "1.4.3",
+  "version": "2.0.0",
   "description": "Google Maps SDK plugin for Nativescript",
   "main": "map-view",
   "typings": "map-view.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "1.5.1",
-      "ios": "1.5.1"
+      "android": "3.0.0",
+      "ios": "3.0.0"
     }
   },
   "scripts": {
@@ -30,9 +30,9 @@
     "url": "https://github.com/dapriett/nativescript-google-maps-sdk/issues"
   },
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
-  "dependencies": {},
   "devDependencies": {
-    "tns-core-modules": "^1.5.1",
-    "typescript": "^1.8.0"
+    "tns-core-modules": "^3.0.0 || ^3.0.0-rc.2",
+    "tns-platform-declarations": "^3.0.0 || ^3.0.0-rc.2",
+    "typescript": "^2.2.2"
   }
 }
