--- a/demo/package.json
+++ b/demo/package.json
@@ -1,16 +1,16 @@
 {
   "nativescript": {
     "id": "org.nativescript.demo",
-    "tns-ios": {
-      "version": "3.0.0-rc.2"
-    },
     "tns-android": {
-      "version": "3.0.0-rc.1"
+      "version": "3.0.0"
+    },
+    "tns-ios": {
+      "version": "3.0.0"
     }
   },
   "dependencies": {
     "nativescript-google-maps-sdk": "file:../",
-    "tns-core-modules": "^3.0.0-rc.2"
+    "tns-core-modules": "^3.0.0"
   },
   "devDependencies": {
     "babel-traverse": "6.7.6",
