Exclude ng demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,13 @@
             ]
         }
     },
+    "include": [
+        "./"
+    ],
     "exclude": [
         "node_modules",
         "platforms",
-        "demo"
+        "demo",
+        "ng-demo"
     ]
 }
