--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     }
   },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/tsc"
   },
