Closes #163 - bearing/zoom/tit incorrectly updated on android.  Closes #147 - added new ui settings property for MapView to add/remove controls, enable/disable gestures.  Added myLocationEnabled to enabled user's location.

--- a/demo/app/App_Resources/iOS/Info.plist
+++ b/demo/app/App_Resources/iOS/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Need location when in use.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Need location always.</string>
 </dict>
 </plist>
