--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 /demo/lib/
+
+# Plugin Scripts
+!src/scripts/*.js
