--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,7 @@
     }
   },
   "dependencies": {
-    "nativescript-google-maps-sdk": "file:../",
+    "nativescript-google-maps-sdk": "../src",
     "nativescript-permissions": "^1.2.3",
     "tns-core-modules": "^4.0.0"
   },
