--- a/ng-demo/package.json
+++ b/ng-demo/package.json
@@ -5,11 +5,11 @@
   "repository": "<fill-your-repository-here>",
   "nativescript": {
     "id": "org.nativescript.ngdemo",
-    "tns-android": {
-      "version": "3.0.0"
-    },
     "tns-ios": {
       "version": "3.0.1"
+    },
+    "tns-android": {
+      "version": "4.0.0"
     }
   },
   "dependencies": {
@@ -22,11 +22,11 @@
     "@angular/platform-browser": "~4.1.0",
     "@angular/router": "~4.1.0",
     "nativescript-angular": "~3.0.0",
-    "nativescript-google-maps-sdk": "file:../",
+    "nativescript-google-maps-sdk": "../src",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.3.0",
-    "tns-core-modules": "~3.0.0",
+    "tns-core-modules": "^4.0.0",
     "zone.js": "~0.8.2"
   },
   "devDependencies": {
