--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
-src/node_modules
+**/node_modules
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion
@@ -90,3 +90,7 @@ crashlytics-build.properties
 
 # Plugin Scripts
 !src/scripts/*.js
+
+# Publish Scripts
+publish/package-lock.json
+publish/package
