--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-google-maps-sdk",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "Google Maps SDK plugin for Nativescript",
   "main": "map-view",
   "typings": "map-view.d.ts",
@@ -12,8 +12,7 @@
   },
   "scripts": {
     "cm": "git-cz",
-    "commitmsg": "validate-commit-msg",
-    "github-release": "conventional-github-releaser -p angular -n ./.github-release.json",
+    "release": "standard-version",
     "clean": "rm -f *.js",
     "build": "npm run clean && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -42,10 +41,13 @@
   },
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
   "devDependencies": {
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@commitlint/prompt": "^8.1.0",
     "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^2.0.0",
     "husky": "^0.14.2",
     "semver": "^5.5.0",
+    "standard-version": "^7.0.0",
     "tns-core-modules": "^4.0.0",
     "tns-platform-declarations": "^4.0.0",
     "typescript": "^2.3.2",
