fix(all): update demo to NS v6.2; demo template cleanup

--- a/demo/app/package.json
+++ b/demo/app/package.json
@@ -23,6 +23,7 @@
 	},
 	"homepage": "https://github.com/NativeScript/template-hello-world",
 	"android": {
-		"v8Flags": "--expose_gc"
+		"v8Flags": "--expose_gc",
+		"markingMode": "none"
 	}
 }
