--- a/demo/package.json
+++ b/demo/package.json
@@ -2,23 +2,23 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-ios": {
-      "version": "6.0.1"
+      "version": "6.2.0"
     },
     "tns-android": {
-      "version": "6.0.0"
+      "version": "6.2.0"
     }
   },
   "dependencies": {
     "nativescript-google-maps-sdk": "../src",
     "nativescript-permissions": "^1.2.3",
-    "tns-core-modules": "6.0.1"
+    "tns-core-modules": "~6.2.0"
   },
   "devDependencies": {
-    "babel-traverse": "6.7.6",
-    "babel-types": "6.7.7",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
     "babylon": "6.7.0",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-webpack": "1.0.1"
+    "nativescript-dev-webpack": "~1.3.0"
   }
 }
