feat: updated old refrences to tns-core-modules
- tns-core-modules is not required anymore, use @nativescript/core instead
- removed tns-core-modules typings (deprecated)
- momentarily added skipLibCheck: true
- version bump (beta)
- plugin build OK

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -10,14 +10,11 @@
         "sourceMap": false,
         "experimentalDecorators": true,
         "noEmitHelpers": true,
-        "lib": [
-            "es6",
-            "dom"
-        ],
+        "skipLibCheck": true,
+        "lib": [ "es2017", "dom", "es6"],
         "baseUrl": ".",
         "paths": {
             "*": [
-                "./node_modules/tns-core-modules/*",
                 "./node_modules/*"
             ]
         }
