--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-google-maps-sdk",
-  "version": "3.0.0",
+  "version": "3.0.0b",
   "description": "Google Maps SDK plugin for Nativescript",
   "main": "map-view",
   "typings": "map-view.d.ts",
@@ -11,6 +11,7 @@
     }
   },
   "scripts": {
+    "tsc": "tsc",
     "cm": "git-cz",
     "commitmsg": "validate-commit-msg",
     "github-release": "conventional-github-releaser -p angular -n ./.github-release.json",
@@ -44,15 +45,15 @@
   },
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
   "devDependencies": {
-    "commitizen": "^4.0.3",
-    "conventional-github-releaser": "^3.1.3",
-    "cz-conventional-changelog": "^2.0.0",
-    "husky": "^0.14.2",
-    "semver": "^5.5.0",
-    "tns-core-modules": "^4.0.0",
-    "tns-platform-declarations": "^4.0.0",
-    "typescript": "^3.9.7",
-    "validate-commit-msg": "^2.12.2"
+    "@nativescript/core": "^7.0.0-rc.24",
+    "commitizen": "^4.1.2",
+    "conventional-github-releaser": "^3.1.5",
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5",
+    "semver": "^7.3.2",
+    "tns-platform-declarations": "^6.5.10",
+    "typescript": "~3.9.7",
+    "validate-commit-msg": "2.14.0"
   },
   "config": {
     "commitizen": {
