--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es5",
+        "target": "es2015",
         "declaration": false,
         "noImplicitAny": false,
         "removeComments": true,
@@ -9,8 +9,12 @@
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": false,
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "noEmitHelpers": true,
-        "lib": [ "es2017", "dom", "es6"],
+        "noEmitOnError": true,
+        "lib": [
+            "es2018", "es2017", "dom", "es6"
+        ],
         "types": [
             "@nativescript/core"
         ],
