chore(lint):  added basic eslint configuration
- installed eslint with typescript-eslint
- basic configuration
- ignored files & folders
- new lint scripts

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,9 @@
     "github-release": "conventional-github-releaser -p angular -n ./.github-release.json",
     "clean": "rm -f *.js",
     "build": "npm run clean && tsc",
+    "lint.ts": "npx eslint . --ext .ts",
+    "lint.dist": "npx eslint . --ext .js",
+    "lint.all": "npm run lint.ts && npm run lint.dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/tsc",
     "plugin.link": "npm link && cd ../demo && npm link nativescript-google-maps-sdk && cd ../src",
@@ -47,9 +50,12 @@
   "devDependencies": {
     "@nativescript/core": "^7.0.0-rc.24",
     "@nativescript/types": "^7.0.0-rc.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "commitizen": "^4.1.2",
     "conventional-github-releaser": "^3.1.5",
     "cz-conventional-changelog": "^3.2.0",
+    "eslint": "^7.5.0",
     "husky": "^4.2.5",
     "semver": "^7.3.2",
     "typescript": "~3.9.7",
