--- a/src/package.json
+++ b/src/package.json
@@ -1,84 +1,93 @@
 {
-  "name"           : "nativescript-google-maps-sdk",
-  "version"        : "3.0.1",
-  "description"    : "Google Maps SDK plugin for Nativescript",
-  "main"           : "map-view",
-  "typings"        : "map-view.d.ts",
-  "nativescript"   : {
-    "platforms": {
-      "android": "6.0.0",
-      "ios"    : "6.0.0"
-    }
-  },
-  "husky"          : {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged"    : {
-    "*.{js,ts}": [
-      "eslint --fix"
-    ]
-  },
-  "scripts"        : {
-    "tsc"                 : "tsc",
-    "cm"                  : "git-cz",
-    "commitmsg"           : "validate-commit-msg",
-    "github-release"      : "conventional-github-releaser -p angular -n ./.github-release.json",
-    "clean"               : "rm -f *.js",
-    "build"               : "npm run clean && tsc",
-    "lint.ts"             : "npx eslint . --ext .ts",
-    "lint.dist"           : "npx eslint . --ext .js",
-    "lint.all"            : "npm run lint.ts && npm run lint.dist",
-    "test"                : "echo \"Error: no test specified\" && exit 1",
-    "compile"             : "./node_modules/.bin/tsc",
-    "plugin.link"         : "npm link && cd ../demo && npm link nativescript-google-maps-sdk && cd ../src",
-    "prepare"             : "node ./scripts/prepare.js",
-    "demo.ios"            : "npm i && npm run build && cd ../demo && tns run ios",
-    "demo.android"        : "npm i && npm run build && cd ../demo && tns run android",
-    "demo-vue.ios"        : "npm i && npm run build && cd ../demo-vue && tns run ios --bundle --syncAllFiles",
-    "demo-vue.android"    : "npm i && npm run build && cd ../demo-vue && tns run android --bundle --syncAllFiles",
-    "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" tns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" tns build ios && echo 'Now look for your library typings in demo/typings!'"
-  },
-  "repository"     : {
+  "name": "nativescript-google-maps-sdk",
+  "description": "Google Maps SDK plugin for Nativescript",
+  "version": "3.0.0",
+  "author": "Dan Prietti <dprietti@gmail.com> (https://github.com/dapriett)",
+  "license": "MIT",
+  "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
+  "repository": {
     "type": "git",
-    "url" : "git+ssh://git@github.com/dapriett/nativescript-google-maps-sdk.git"
+    "url": "git+ssh://git@github.com/dapriett/nativescript-google-maps-sdk.git"
   },
-  "keywords"       : [
+  "bugs": {
+    "url": "https://github.com/dapriett/nativescript-google-maps-sdk/issues"
+  },
+  "keywords": [
     "Nativescript",
     "Google",
     "Maps",
     "API",
     "SDK"
   ],
-  "author"         : "Dan Prietti <dprietti@gmail.com> (https://github.com/dapriett)",
-  "license"        : "MIT",
-  "bugs"           : {
-    "url": "https://github.com/dapriett/nativescript-google-maps-sdk/issues"
+  "main": "map-view",
+  "typings": "map-view.d.ts",
+  "nativescript": {
+    "platforms": {
+      "android": "7.0.0",
+      "ios": "7.0.0"
+    }
   },
-  "homepage"       : "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
+  "dependencies": {
+    "ts-node": "^9.0.0"
+  },
   "devDependencies": {
-    "@nativescript/core"              : "^7.0.0-rc.24",
-    "@nativescript/types"             : "^7.0.0-rc.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser"       : "^3.7.0",
-    "commitizen"                      : "^4.1.2",
-    "conventional-github-releaser"    : "^3.1.5",
-    "cz-conventional-changelog"       : "^3.2.0",
-    "eslint"                          : "^7.5.0",
-    "husky"                           : "^4.2.5",
-    "lint-staged"                     : "^10.2.11",
-    "semver"                          : "^7.3.2",
-    "typescript"                      : "~3.9.7",
-    "validate-commit-msg"             : "2.14.0"
+    "@nativescript/core": "~7.0.0",
+    "@nativescript/types": "~7.0.0",
+    "@nativescript/webpack": "~3.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "commitizen": "^4.2.1",
+    "conventional-github-releaser": "^3.1.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.8.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.3.0",
+    "semver": "^7.3.2",
+    "ts-patch": "^1.3.0",
+    "typescript": "~3.9.0",
+    "validate-commit-msg": "^2.14.0"
   },
-  "config"         : {
-    "commitizen"         : {
+  "scripts": {
+    "tsc": "tsc",
+    "cm": "git-cz",
+    "commitmsg": "validate-commit-msg",
+    "github-release": "conventional-github-releaser -p angular -n ./.github-release.json",
+    "clean": "rm -f *.js",
+    "patch:check": "ts-patch check",
+    "setup": "npm i && ts-patch install",
+    "build": "npm run clean && tsc",
+    "lint.ts": "npx eslint . --ext .ts",
+    "lint.dist": "npx eslint . --ext .js",
+    "lint.all": "npm run lint.ts && npm run lint.dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "./node_modules/.bin/tsc",
+    "plugin.link": "npm link && cd ../demo && npm link nativescript-google-maps-sdk && cd ../src",
+    "prepare": "node ./scripts/prepare.js",
+    "demo.ios": "npm i && npm run build && cd ../demo && ns run ios",
+    "demo.android": "npm i && npm run build && cd ../demo && ns run android",
+    "demo-vue.ios": "npm i && npm run build && cd ../demo-vue && ns run ios --bundle --syncAllFiles",
+    "demo-vue.android": "npm i && npm run build && cd ../demo-vue && ns run android --bundle --syncAllFiles",
+    "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" ns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" ns build ios && echo 'Now look for your library typings in demo/typings!'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
+  },
+  "config": {
+    "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     },
     "validate-commit-msg": {
       "helpMessage": "\nPlease fix your commit message to match format.  For help, execute 'npm run cm'\n",
-      "types"      : [
+      "warnOnFail": false,
+      "autoFix": false,
+      "types": [
         "feat",
         "fix",
         "docs",
@@ -89,9 +98,7 @@
         "chore",
         "revert",
         "custom"
-      ],
-      "warnOnFail" : false,
-      "autoFix"    : false
+      ]
     }
   }
 }
