--- a/demo/package.json
+++ b/demo/package.json
@@ -1,24 +1,22 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.demo",
-    "tns-ios": {
-      "version": "6.2.0"
-    },
-    "tns-android": {
-      "version": "6.2.0"
-    }
-  },
   "dependencies": {
-    "nativescript-google-maps-sdk": "../src",
+    "nativescript-google-maps-sdk": "file:../src",
     "nativescript-permissions": "^1.2.3",
-    "tns-core-modules": "~6.2.0"
+    "@nativescript/core": "~7.0.12"
   },
   "devDependencies": {
+    "@nativescript/android": "7.0.1",
+    "@nativescript/ios": "7.0.4",
+    "@nativescript/types": "^7.0.4",
+    "@nativescript/webpack": "~3.0.0",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "babylon": "6.7.0",
+    "eslint": "^7.5.0",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-webpack": "~1.3.0"
-  }
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.0"
+  },
+  "main": "app.js"
 }
