fix(444): Upgrade to NS7

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-google-maps-sdk",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "description": "Google Maps SDK plugin for Nativescript",
   "main": "map-view",
   "typings": "map-view.d.ts",
@@ -15,7 +15,7 @@
     "commitmsg": "validate-commit-msg",
     "github-release": "conventional-github-releaser -p angular -n ./.github-release.json",
     "clean": "rm -f *.js",
-    "build": "npm run clean && ts-patch install && tsc",
+    "build": "npm i && ts-patch install && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/tsc",
     "plugin.link": "npm link && cd ../demo && npm link nativescript-google-maps-sdk && cd ../src",
@@ -45,23 +45,26 @@
   },
   "homepage": "https://github.com/dapriett/nativescript-google-maps-sdk#readme",
   "devDependencies": {
-    "@nativescript/core": "^7.0.12",
-    "@nativescript/types": "^7.0.4",
-    "@nativescript/webpack": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@nativescript/core": "~7.0.3",
+    "@nativescript/types": "~7.0.3",
+    "@nativescript/webpack": "~3.0.4",
     "commitizen": "^4.2.2",
     "conventional-github-releaser": "^3.1.5",
     "cz-conventional-changelog": "^2.0.0",
-    "husky": "^0.14.2",
-    "semver": "^5.5.0",
-    "ts-patch": "^1.3.0",
-    "typescript": "~3.9.0",
     "validate-commit-msg": "^2.12.2",
+    "husky": "^4.2.5",
     "lint-staged": "^10.3.0",
+    "ng-packagr": "~10.1.0",
     "prettier": "^2.1.1",
+    "prompt": "^1.0.0",
+    "semver": "^5.5.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
+    "tslint": "~6.0.0",
+    "ts-patch": "^1.3.0",
+    "ts-node": "~9.0.0",
+    "typescript": "~3.9.7",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "eslint": "^7.5.0"
   },
   "config": {
